--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -3,11 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">
-            @drawable/splash
-        </item>
+        <item name="android:colorBackground">@color/primary</item>
         <item name="android:statusBarColor">
-            @color/primary
+            #0d86d1
         </item>
     </style>
 
